fix text align applying to all of app

--- a/src/pages/styles/AnimeShow.css
+++ b/src/pages/styles/AnimeShow.css
@@ -7,10 +7,10 @@ li{
 }
 
 @media screen and (min-width:800px) {
-    *{
+    #anime-show{
         text-align: left;
     }
-    li{
+    ul li{
         list-style: disc;
     }
     img{
